# ConalepTallerQML

AnimacionCurva/: CMakeLists.txt  Main.qml  main.cpp
ArrastrarSoltar/: CMakeLists.txt  Main.qml  MovableRectangle.qml  main.cpp
ColorPicker/: CMakeLists.txt  Main.qml  main.cpp
EjemploDrawer/: CMakeLists.txt  Main.qml  main.cpp
Graficas/: CMakeLists.txt  Main.qml  Plot1.qml  Plot2.qml  Plot3.qml  Plot4.qml  main.cpp
JuegoGato/: CMakeLists.txt  Main.qml  Square.qml  juegoutil.cpp  juegoutil.h  main.cpp
ListaDeContactos/: AddContact.qml  CMakeLists.txt  ContactEditorPage.qml  ContactList.qml  DeleteContact.qml  EditContact.qml  Main.qml  main.cpp
